= 0.16.1

  * Fixed a file name in a require call.

= 0.16.0

  * Added the ability to pass a callback as the second argument to a build
    middleware. This callback receives the build as its only argument.
  * Require node >= 0.8.0.

= 0.15.1 / 2012-05-31

  * Updates to some documentation.

= 0.15.0 / 2012-05-31

  * Added -r flag to strata executable to automatically reload all application
    code on a given interval in a child process.
  * Added -q flag to strata executable to prevent the server startup message
    from being printed to the console.
  * Added strata.defaultPort variable.

= 0.14.0 / 2012-05-30

  * Renamed strata.map middleware to strata.urlMap to avoid naming conflict
    with high-level sugar API.
  * Renamed strata.route middleware to strata.router to avoid naming conflict
    with high-level sugar API.

= 0.13.0 / 2012-05-29

  * Added timeout middleware to set a limit on the amount of time a server may
    respond to a request. Also added timeout environment variable.
  * Added strata.bind and strata.startServer. Also added a requestListener
    argument to strata.createServer in order to more closely conform with
    the API in node core and removed the app argument so that more than one app
    may be bound to a single server.
  * Removed "name" option from strata.createServer.

= 0.12.5 / 2012-04-16

  * Use "delete" instead of "del" for router methods. Although "delete" is
    indeed a reserved word in JavaScript, that fact applies only to identifiers
    and not identifier names (see https://developer.mozilla.org/en/JavaScript/Reference/Reserved_Words).
  * Added support for the `callback` HTTP parameter in JSONP middleware. This
    value takes precedence over any pre-configured callback name that is given
    when the middleware is instantiated.

= 0.12.4 / 2012-03-30

  * Fixed a bug where the request would not return properly when using the
    directory middleware and the directory is not found.

= 0.12.3 / 2012-03-23
