@@ -373,6 +373,7 @@ var modules = {
   "Response": "response",
   // Middleware
   "authBasic": "auth/basic",
+  "authenticityToken": "authenticity-token",
   "build": "build",
   "cascade": "cascade",
   "commonLogger": "commonlogger",
